--- a/com.main.SpendWiselyClient-1.0-SNAPSHOT/pom.xml
+++ b/com.main.SpendWiselyClient-1.0-SNAPSHOT/pom.xml
@@ -76,6 +76,13 @@
     <version>3.2.0.RELEASE</version>
   </dependency>
   
+  <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>3.2.0.RELEASE</version>
+  </dependency>
+  
+  
   
   <dependency>
 	<groupId>javax.servlet</groupId>
