--- a/com.main.SpendWiselyClient-1.0-SNAPSHOT/src/main/webapp/WEB-INF/web.xml
+++ b/com.main.SpendWiselyClient-1.0-SNAPSHOT/src/main/webapp/WEB-INF/web.xml
@@ -5,17 +5,29 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   
-  <!-- needed for ContextLoaderListener -->
-<!-- 	<context-param> -->
-<!-- 		<param-name>contextConfigLocation</param-name> -->
-<!-- 		<param-value>/WEB-INF/applicationContext.xml</param-value> -->
-<!-- 	</context-param> -->
-
- 	<!-- Bootstraps the root web application context before servlet initialization --> 
-<!-- 	<listener> -->
-<!-- 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> -->
-<!-- 	</listener> -->
+ <!--  needed for ContextLoaderListener  -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml,/WEB-INF/security-Context.xml</param-value>
+	</context-param>
 	
+	<filter>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	
+	<filter-mapping>
+	<filter-name>springSecurityFilterChain</filter-name>
+<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+
+ 	<!-- Bootstraps the root web application context before servlet initialization -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+		
 <!-- The front controller of this Spring Web application, responsible for handling all application requests -->
 	<servlet>
 		<servlet-name>springDispatcherServlet</servlet-name>
